# OctoPrint-MQTTSubscribe

./: MANIFEST.in  README.md  Taskfile.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: stale.yml
extras/: mqttsubscribe.md
octoprint_mqttpublish/: __init__.py
octoprint_mqttpublish/static/js/: mqttpublish.js
octoprint_mqttpublish/templates/: mqttpublish_navbar.jinja2  mqttpublish_settings.jinja2
octoprint_mqttsubscribe/: __init__.py
octoprint_mqttsubscribe/static/js/: mqttsubscribe.js
octoprint_mqttsubscribe/templates/: mqttsubscribe_settings.jinja2
